force-app/main/default/objects/smagicinteract__Conversation_Assignment_Notify_Setting__c/smagicinteract__Conversation_Assignment_Notify_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Conversation Assignment Notify Setting</label>
</CustomObject>