force-app/main/default/objects/smagicinteract__Conversation_Assignment_Notify_Setting__c/fields/smagicinteract__Chatter__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter</label>
    <type>Checkbox</type>
</CustomField>