force-app/main/default/objects/smagicinteract__Conversation_Assignment_Notify_Setting__c/fields/smagicinteract__Email__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>