force-app/main/default/objects/smagicinteract__Conversation_Assignment_Notify_Setting__c/fields/smagicinteract__SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>